<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tcl_account_state"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:alpha="0.86"
            android:text="@string/tcl_account"/>
        <TextView
            android:id="@+id/tcl_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:alpha="0.35"
            android:text="@string/not_login_state"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/qq_helper_state"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.86"
                android:text="@string/change_qq_helper"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/already_authorize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:text="@string/already_connect"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:src="@com.mst:drawable/ic_next_page"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sync_only_wifi"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.86"
                android:text="@string/sync_only_wifi_on"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:text="@string/save_traffic"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <Switch
            android:id="@+id/sync_when_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
</LinearLayout>