<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#0f000000" />

    <include layout="@layout/local_cloud_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/merge_layout"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@drawable/my_ripple"
                 >
                <RadioButton
                    android:id="@+id/radio_bt_merge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/radio_bt_merge"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:alpha="0.86"
                        android:text="@string/local_cloud_merge"
                        />
                    <TextView
                        android:id="@+id/local_cloud_merge_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:alpha="0.3"
                        android:text="@string/contacts_local_cloud_merge_count"
                        />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/base_local_layout"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@drawable/my_ripple"

                >
                <RadioButton
                    android:id="@+id/radio_bt_base_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/radio_bt_base_local"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:alpha="0.86"
                        android:text="@string/contacts_base_local"
                        />
                    <TextView
                        android:id="@+id/base_local_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:alpha="0.3"
                        android:text="@string/contacts_base_local_count"
                        />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/base_cloud_layout"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@drawable/my_ripple"

                >
                <RadioButton
                    android:id="@+id/radio_bt_base_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/radio_bt_base_cloud"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:alpha="0.86"
                        android:text="@string/contacts_base_cloud"
                        />
                    <TextView
                        android:id="@+id/base_cloud_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:alpha="0.3"
                        android:text="@string/contacts_base_cloud_count"
                        />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/next_layout"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/line_bt_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.85"
            android:text="@string/next_step"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>