<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="323dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/qq_sync"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/img_bg"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:textColor="@color/text_gray_66"
                android:lineSpacingExtra="4dp"
                android:text="@string/str_login_info"/>



        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/regist_layout"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/blue_bt_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.85"
                android:text="@string/str_longin_regist_tcl_account"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>


    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:background="@drawable/blue_bt_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.85"
            android:text="@string/str_login_tcl_account"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    </LinearLayout>
</LinearLayout>
