<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#0f000000" />

    <include layout="@layout/local_cloud_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/auto_sync_switch_layout"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/my_ripple"
            android:layout_marginTop="11dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/net_situation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.86"
                    android:text="@string/sync_auto"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/last_sync_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:alpha="0.3"
                    android:text="@string/sync_auto"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <Switch
                android:id="@+id/auto_sync_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/sync_or_recovery_layout"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:id="@+id/sync_to_cloud_layout"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/blue_bt_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:alpha="0.85"
                    android:text="@string/sync_to_cloud"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/download_to_local_layout"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/line_bt_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:alpha="0.85"
                    android:text="@string/download_to_local"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>